# adobo-ie

./: CMakeLists.txt  README.mediawiki  Registration-Free-README.mediawiki  Registration-Free-README.txt  adobo.cmake  staticlibs.cmake  version.h
exportversion/: CMakeLists.txt  main.cpp
libcomhelper/: ActivationHelper.cpp  AtlFnInfos.cpp  CMakeLists.txt  ComUtil.cpp  IDispatchHelper.cpp  errorchecking.h  libcomhelper.h  stdafx.h  uri.cpp  version.cpp
libcomhelper/include/: ActivationHelper.h  libcomhelper.h
libhtmlpanel/: CMakeLists.txt  HtmlPanel.cpp  HtmlPanelUIHandler.cpp  stdafx.h  version.cpp
libhtmlpanel/include/: HtmlPanel.h  HtmlPanelUIHandler.h
libsalsitaextension/: CMakeLists.txt  HtmlToolbarWindow.cpp  SalsitaExtension.h  SalsitaExtensionEventHandler.cpp  SalsitaExtensionHelper.cpp  SalsitaExtensionHelper.h  SalsitaToolbarBrowserCustomization.cpp  stdafx.h  version.cpp
libsalsitaextension/include/: HtmlToolbarWindow.h  SalsitaExtension.h  SalsitaExtensionEventHandler.h  SalsitaExtensionHelper.h  SalsitaScriptedClient.h  SalsitaToolbar.h  SalsitaToolbarBrowserCustomization.h  libsalsitaextension_stdheaders.h
magpie/: ActiveScriptDebugT.h  ActiveScriptLoaderT.h  ActiveScriptT.h  CMakeLists.txt  CustomInternetSecurityImpl.cpp  CustomInternetSecurityImpl.h  DispExIdManager.cpp  DispExIdManager.h  Magpie.cpp  Magpie.def  Magpie.idl  Magpie.rc  Magpie.rgs  MagpieActiveScript.cpp  MagpieActiveScript.h  MagpieApplication.cpp  MagpieApplication.h  MagpieApplication.rgs  MagpieConsole.cpp  MagpieConsole.h  MagpieModule.cpp  MagpieModule.h  MagpieModuleExports.cpp  MagpieModuleExports.h  MagpieRequire.cpp  MagpieRequire.h  MagpieSystem.rgs  Misc.cpp  Misc.h  PopupBrowserWindow.cpp  PopupBrowserWindow.h  SalsitaApiImpl.cpp  SalsitaApiImpl.h  SalsitaContentApi.cpp  SalsitaContentApi.h  SalsitaFramework.cpp  SalsitaFramework.h  _IMagpieLoggerEvents_CP.H  atlextensions.h  dllmain.cpp  (+5 more)
scriptservice/: CMakeLists.txt  HiddenBrowserView.cpp  HiddenBrowserView.h  MainFrm.cpp  MainFrm.h  SalsitaApiServiceImpl.cpp  SalsitaApiServiceImpl.h  ScriptService.cpp  ScriptService.h  ScriptService.rgs  ScriptServiceFactory.h  ScriptServiceInstance.cpp  ScriptServiceInstance.h  ScriptServiceInstance.rgs  exports.def  main.cpp  resource.h  scriptservice.dll.manifest  service.idl  service.rc  stdafx.h
scriptservice-testconsumer/: CMakeLists.txt  main.cpp  stdafx.h
scriptservice/include/: ScriptServiceFactory.h  ScriptServiceInstanceClient.h
